Version 42.alpha
~~~~~~~~~~~~~~~~
Released: 2022-01-07

This is the first unstable release for GNOME 42.
 * Various UI parts updated
 * Support more markup in the application description
 * Ask about package signature with PackageKit on signing issue
 * Show better System Update progress
 * Remove various cultural sensitivity badges
 * Fix a crash when processing age ratings
 * Reload application details only when not installing/removing the application
 * Do not follow symlinks when calculating disk size usage
 * Fix addons section, which could show addons for different application
 * Fix showing a ‘transaction in progress’ error when using the rpm-ostree plugin
 * Don’t recommend a reboot if firmware updates fail
 * Fix flathub repo being considered present on Fedora 35 with filtered flathub
 * Allow searching for extensions
 * Fix translation of main button on updates page
 * Fix codec installation process
 * Add new GNOME Circle apps to the featured carousel
 * Improve metadata support for snaps
 * Fix update checks being missed across suspend/hibernation
 * Ensure application lists are updated when repositories are enabled/installed or
   disabled/removed

This release also updates translations:
 * Basque
 * Belarusian
 * Bulgarian
 * Catalan
 * Chinese (China)
 * Croatian
 * Dutch
 * English (United Kingdom)
 * Friulian
 * Galician
 * German
 * Hebrew
 * Icelandic
 * Indonesian
 * Latvian
 * Lithuanian
 * Occitan (post 1500)
 * Persian
 * Portuguese
 * Portuguese (Brazil)
 * Russian
 * Serbian
 * Slovak
 * Slovenian
 * Spanish
 * Swedish
 * Turkish
 * Ukrainian
 * Vietnamese

Version 41.0
~~~~~~~~~~~~
Released: 2021-09-17

This is a stable release with the following changes:
 * Instead of showing all package-based apps as "potentially unsafe", only use that language for
   3rd party ones
 * Fix a bug where the "Show more" button on an app details page would flicker when the window is
   resized